Add contact form submission storage and admin panel
Contact Form Storage:
- Created api/submissions.js for local file-based storage
- Updated api/contact.js to save all form submissions
- Added unique ID and timestamp to each submission
- Submissions stored in data/submissions.json

Admin Panel:
- Created api/admin.js for viewing submissions
- Added admin.html for web-based submission viewer
- Simple password authentication (admin123 by default)
- View submissions by date range (7, 30, 90 days)
- Clean, responsive admin interface

Features:
- All contact form submissions now saved locally
- Email notifications still sent to drmkgahlot@gmail.com
- WhatsApp notifications still sent to +918233666311
- Admin can view all submissions with full details
- Secure access with password protection

--- a/vercel.json
+++ b/vercel.json
@@ -19,10 +19,14 @@
     }
   ],
   "routes": [
-    {
-      "src": "/api/contact",
-      "dest": "/api/contact.js"
-    },
+                {
+                "src": "/api/contact",
+                "dest": "/api/contact.js"
+            },
+            {
+                "src": "/api/admin",
+                "dest": "/api/admin.js"
+            },
     {
       "src": "/css/(.*)",
       "dest": "/css/$1"
